# seu-event

./: .env.example  CLAUDE.md  Dockerfile  entrypoint.sh  pyproject.toml
apps/common/: authentication.py  permissions.py
apps/events/: apps.py  models.py
apps/events/application/use_cases/: complete_event.py  create_category.py  create_event.py  create_tag.py  delete_event.py  generate_ical.py  get_event.py  list_categories.py  list_events.py  list_my_events.py  list_tags.py  publish_event.py  update_event.py  update_registration_count.py
apps/events/domain/: entities.py  exceptions.py  repositories.py
apps/events/infrastructure/: admin.py  capacity.py  event_publisher.py  haversine.py  models.py  repositories.py  review_models.py  search_index.py  storage.py
apps/events/management/commands/: consume_events.py  seed_categories.py
apps/events/migrations/: 0000_create_events_schema.py  0001_initial.py  0002_add_cover_image_is_online.py  0003_add_category_model.py  0004_add_tag_model.py  0005_add_event_category_tags.py  0006_add_allowed_domains_to_event.py  0007_add_online_url_and_event_media.py  0008_add_organisation_id.py  0008_add_organization_id.py  0009_add_event_review.py  0009_add_thumbnail_urls_venue_coords.py  0010_merge_20260530_0357.py  0011_add_hybrid_event_fields.py  0012_add_waitlist_enabled.py
apps/events/presentation/: serializers.py  urls.py  views.py
apps/events/tests/unit/: fakes.py  test_audit_publisher.py  test_capacity.py  test_categories.py  test_complete_event.py  test_cover_image_is_online.py  test_create_event.py  test_delete_event.py  test_domain_restriction.py  test_event_category_tags.py  test_event_publisher.py  test_event_reviews.py  test_generate_ical.py  test_get_event.py  test_hybrid_events.py  test_list_events.py  test_list_my_events.py  test_location_search.py  test_org_permissions.py  test_publish_event.py  test_search_index.py  test_seed_categories.py  test_tag_usage_count.py  test_tags.py  test_thumbnails.py  test_update_event.py  test_update_registration_count.py  test_venue_coordinates.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
