[project]
name = "event-service"
version = "0.1.0"
description = "Event lifecycle management service for the Sansaar platform."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "psycopg2-binary",
    "django-cors-headers",
    "python-decouple",
    "gunicorn",
    "redis",
    "celery[redis]>=5.4",
    "pika",
    "drf-spectacular",
    "boto3>=1.43.9",
    "elasticsearch>=8.0",
    "pillow>=11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
exclude = ["*/migrations/*"]
line-length = 140
target-version = "py313"
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
# django ORM models use descriptor-based fields that mypy cannot infer without stubs
# suppress module-level annotation noise in infrastructure and presentation layers
[[tool.mypy.overrides]]
module = [
    "apps.events.infrastructure.*",
    "apps.events.presentation.*",
    "apps.events.application.*",
    "apps.events.management.*",
    "apps.common.api.*",
    "apps.common.health",
    "apps.events.tests.*",
    "apps.events.migrations.*",
    "apps.common.middleware.*",
    "config.*",
]
ignore_errors = true
