[project]
name = "event-service"
version = "0.1.0"
description = "Event lifecycle management service for the Sansaar platform."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "psycopg2-binary",
    "django-cors-headers",
    "python-decouple",
    "gunicorn",
    "redis",
    "cryptography>=42.0.0",
    "celery[redis]>=5.4",
    "pika",
    "drf-spectacular",
    "boto3>=1.43.9",
    "elasticsearch>=8.0",
    "pillow>=11.0",
    "dj-database-url>=2.0.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
exclude = ["*/migrations/*"]
line-length = 140
target-version = "py313"
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.development"
[[tool.mypy.overrides]]
module = [
    "apps.events.infrastructure.*",
    "apps.events.presentation.*",
    "apps.events.application.*",
    "apps.events.management.*",
    "apps.common.api.*",
    "apps.common.health",
    "apps.events.tests.*",
    "apps.events.migrations.*",
    "apps.common.middleware.*",
    "config.*",
]
ignore_errors = true
